feat: add users api

--- a/back/package.json
+++ b/back/package.json
@@ -7,6 +7,8 @@
     "build": "tsc && node dist"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
