--- a/Seminar2/back/package.json
+++ b/Seminar2/back/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^5.12.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/mongoose": "^5.10.4",
     "@types/node": "^14.14.37",
