--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,8 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "ts-node src",
-    "build": "tsc && node dist"
+    "build": "tsc && node dist",
+    "test": "nodemon"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
@@ -12,7 +13,8 @@
     "express-validator": "^6.10.0",
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.3"
+    "mongoose": "^5.12.3",
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
