--- a/back/package.json
+++ b/back/package.json
@@ -4,9 +4,12 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "ts-node src",
-    "build": "tsc && node dist"
+    "build": "tsc && node dist",
+    "test":"nodemon"
+
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
@@ -15,9 +18,11 @@
     "mongoose": "^5.12.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/mongoose": "^5.10.4",
     "@types/node": "^14.14.37",
+    "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
