--- a/back/package.json
+++ b/back/package.json
@@ -4,20 +4,26 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "ts-node src",
-    "build": "tsc && node dist"
+    "build": "tsc && node dist",
+    "test" : "nodemon"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
     "gravatar": "^1.8.1",
+    "js": "^0.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/mongoose": "^5.10.4",
     "@types/node": "^14.14.37",
+    "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
