--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,8 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "ts-node src",
-    "build": "tsc && node dist"
+    "build": "tsc && node dist",
+    "test": "nodemon"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
@@ -19,7 +20,8 @@
     "@types/mongoose": "^5.10.4",
     "@types/node": "^14.14.37",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "nodemon":"^2.0.7"
   },
   "author": "",
   "license": "ISC",
