--- a/back/package.json
+++ b/back/package.json
@@ -19,9 +19,9 @@
     "@types/express": "^4.17.11",
     "@types/mongoose": "^5.10.4",
     "@types/node": "^14.14.37",
+    "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3",
-    "nodemon":"^2.0.7"
+    "typescript": "^4.2.3"
   },
   "author": "",
   "license": "ISC",
