--- a/back/package.json
+++ b/back/package.json
@@ -8,6 +8,7 @@
     "test": "nodemon"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
@@ -16,6 +17,7 @@
     "mongoose": "^5.12.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/mongoose": "^5.10.4",
     "@types/node": "^14.14.37",
