--- a/back/package.json
+++ b/back/package.json
@@ -13,7 +13,8 @@
     "express-validator": "^6.10.0",
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.3"
+    "mongoose": "^5.12.3",
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
