--- a/back/package.json
+++ b/back/package.json
@@ -15,7 +15,8 @@
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
