--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -14,7 +14,7 @@
     "outDir": "./build",
     "allowJs": true,
     "noEmit": false,
-    "esModuleInterop": true
+    "esModuleInterop": true,
   },
   "include": ["./src/**/*"],
   "exclude": ["node_modules", "tests"]
