3주차 세미나

--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "ts-node src",
     "build": "tsc && node dist",
-    "test" : "nodemon"
+    "test": "nodemon"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -14,7 +14,8 @@
     "express-validator": "^6.10.0",
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.3"
+    "mongoose": "^5.12.3",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
