--- a/front/package.json
+++ b/front/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "request": "^2.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
