--- a/back/package.json
+++ b/back/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
     "gravatar": "^1.8.1",
+    "http-proxy-middleware": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "request": "^2.88.2"
