--- a/front/package.json
+++ b/front/package.json
@@ -42,5 +42,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  //"proxy": "http://localhost:5000"
+  "proxy": "54.180.125.134"
 }
